fix log floating in middle of screen on ios safari (media queries not working on ios safari)

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -36,7 +36,8 @@
   margin: 25px 0 0 0;
 }
 
-@media all and (max-device-width: 720px) {
+@media screen and (max-device-width: 720px),
+screen and (max-width: 720px){
   .mc_input {
     padding-top: 19px;
     padding-bottom: 14px;
